--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ cmake_minimum_required(VERSION 3.22)
 
 set(CMAKE_COMPILE_WARNING_AS_ERROR TRUE) # check for warnings
 set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -Wpedantic)
+set(BUILD_SHARED_LIBS 1)
 
 # avoid DOWNLOAD_EXTRACT_TIMESTAMP warning in CMake 3.24
 if (CMAKE_VERSION VERSION_GREATER_EQUAL "3.24.0")
